--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap4 %}
+
 {% load static%}
 <!DOCTYPE html>
 <html>
@@ -12,13 +12,15 @@
   {% endif %}
 
   {% block styles %}
-    {% bootstrap_css %}
+  
     
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Shalimar&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+
   {% endblock %}
   
 </head>
@@ -28,12 +30,10 @@
     {%endblock%}
     {% include "footer.html" %}
 
-    <!-- Cart javascript -->
-    <script src="{% static 'js/cart.js'%}"></script>
 
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-     {% bootstrap_javascript %}
+     
     
     {% endblock %}
 </body>
