created div site wrap & added classes to body element

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,9 @@
   {% endblock %}
   
 </head>
-<body>
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+
+  <div class="site-wrap">
     {% include "navbar.html" %}
     {% block content %} 
     {%endblock%}
@@ -36,5 +38,6 @@
      
     
     {% endblock %}
+  </div>
 </body>
 </html>
