added first owl-carousel element

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,12 @@
 {% block content %} 
 
 
+<div class="site-block-wrap">
+    <div class="owl-carousel with-dots">
+
+    </div>
+</div>
+
 
 {% endblock %}
     
