--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,22 @@
 
 <div class="site-block-wrap">
     <div class="owl-carousel with-dots">
+        <div class="site-blocks-cover overlay overlay-2" style="box-shadow:inset 0 0 0 2000px rgba(135, 189, 135, 0.342);background-image: url(images/hero_1.jpg);" data-aos="fade" id="home-section">
 
+
+            <div class="container">
+              <div class="row align-items-center justify-content-center">
+                <div class="col-lg-12 mt-lg-5 ">
+                  <h1 class="text-shadow">Secure <br> Storage For Your goods</h1>
+                  <p class="mb-5 text-shadow">Neque porro quisquam est qui dolorem ...<a href="" target="_blank">store.com</a>  </p>
+                  <p><a href="/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
+                  
+                </div>
+              </div>
+            </div>
+      
+            
+          </div>  
     </div>
 </div>
 
