--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,40 @@
       
             
           </div>  
+
+          <div class="site-blocks-cover overlay overlay-2" style="box-shadow:inset 0 0 0 2000px rgba(135, 189, 135, 0.342);background-image: url(images/hero_2.jpg);" data-aos="fade" id="home-section">
+  
+  
+            <div class="container">
+              <div class="row align-items-center justify-content-center">
+                <div class="col-lg-12 mt-lg-5 ">
+                  <h1 class="text-shadow">Lorem ipsum dolor sit <br> amet consectetur <br> adipisicing elit. </h1>
+                  <p class="mb-5 text-shadow">Neque porro quisquam est qui dolorem ... <a href="/" target="_blank">store.com</a>  </p>
+                  <p><a href="/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
+                  
+                </div>
+              </div>
+            </div>
+      
+            
+          </div> 
+
+          <div class="site-blocks-cover overlay overlay-2" style="box-shadow:inset 0 0 0 2000px rgba(135, 189, 135, 0.342);background-image: url(images/loop.jpg);" data-aos="fade" id="home-section">
+  
+  
+            <div class="container">
+              <div class="row align-items-center justify-content-center">
+                <div class="col-lg-12 mt-lg-5 ">
+                  <h1 class="text-shadow">Lorem ipsum dolor sit <br> amet consectetur <br> adipisicing elit. </h1>
+                  <p class="mb-5 text-shadow">Neque porro quisquam est qui dolorem ... <a href="/" target="_blank">store.com</a>  </p>
+                  <p><a href="/" target="_blank" class="btn btn-primary btn-sm">Get Started</a></p>
+                  
+                </div>
+              </div>
+            </div>
+      
+            
+          </div>  
     </div>
 </div>
 
