added warehousing site section & informative illustrations

--- a/templates/index.html
+++ b/templates/index.html
@@ -114,5 +114,42 @@
 </div>
 
 
+
+<section class="site-section" id="about-section">
+    <div class="container">
+      
+      <div class="row large-gutters">
+        <div class="col-lg-6 ml-auto">
+          
+          <h2 class="section-title mb-3">Warehousing </h2>
+              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <p>Est qui eos quasi ratione nostrum excepturi id recusandae fugit omnis ullam pariatur itaque nisi voluptas impedit  Quo suscipit omnis iste velit maxime.</p>
+
+              <ul class="list-unstyled ul-check success">
+                <li>Placeat maxime animi minus</li>
+                <li>Dolore qui placeat maxime</li>
+                <li>Consectetur adipisicing</li>
+                <li>Lorem ipsum dolor</li>
+                <li>Placeat molestias animi</li>
+              </ul>
+
+              <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
+          
+        </div>
+
+        <div class="col-lg-6 mb-5">
+
+          <div class="owl-carousel slide-one-item with-dots">
+            <div><img src="images/flank3.jpg" class="img-fluid"></div>
+            <div><img src="images/img_3.png" class="img-fluid"></div>
+              <div><img src="images/img_2.jpg" class="img-fluid"></div>
+            </div>
+
+      </div>
+      </div>
+    </div>
+  </section>
+
+
 {% endblock %}
     
