--- a/templates/index.html
+++ b/templates/index.html
@@ -151,5 +151,19 @@
   </section>
 
 
+  <div class="py-5 bg-light container site-section how-it-works" id="howitworks-section">
+<div class="container">
+    <div class="row mb-5 justify-content-center">
+        <div class="col-md-7 text-center">
+          <h2 class="section-title mb-3 text-black">How It Works</h2>
+        </div>
+      </div>
+
+
+</div>
+  </div>
+
+
+
 {% endblock %}
     
