added 3 hypothesis sections

--- a/templates/index.html
+++ b/templates/index.html
@@ -158,8 +158,34 @@
           <h2 class="section-title mb-3 text-black">How It Works</h2>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-4 text-center">
+            <div class="pr-5 first-step">
+              <span class="text-black">01.</span>
+              <span class="custom-icon flaticon-house text-black"></span>
+              <h3 class="text-black">Find <br> Your Space.</h3>
+              <p class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
 
+          <div class="col-md-4 text-center">
+            <div class="pr-5 second-step">
+              <span class="text-black">02.</span>
+              <span class="custom-icon flaticon-coin text-black"></span>
+              <h3 class="text-dark">Choose <br> Your Storage Plan.</h3>
+              <p class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
 
+          <div class="col-md-4 text-center">
+            <div class="pr-5">
+              <span class="text-black">03.</span>
+              <span class="custom-icon flaticon-home text-black"></span>
+              <h3 class="text-dark">Outstanding & Economical <br> Space Utilisation .</h3>
+              <p class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+      </div>
 </div>
   </div>
 
