--- a/templates/index.html
+++ b/templates/index.html
@@ -151,7 +151,7 @@
   </section>
 
 
-  <div class="py-5 bg-light container site-section how-it-works" id="howitworks-section">
+<section class="py-5 bg-light container site-section how-it-works" id="howitworks-section">
 <div class="container">
     <div class="row mb-5 justify-content-center">
         <div class="col-md-7 text-center">
@@ -187,7 +187,7 @@
           </div>
       </div>
 </div>
-  </div>
+  </section>
 
 
 
