created blog section

--- a/templates/index.html
+++ b/templates/index.html
@@ -189,7 +189,8 @@
 </div>
   </section>
 
-
-
-{% endblock %}
-    
+  <section class="site-section" id="news-section">
+      <div class="container">
+          
+      </div>
+  </secti
