--- a/templates/index.html
+++ b/templates/index.html
@@ -190,7 +190,41 @@
   </section>
 
   <section class="site-section" id="news-section">
-      <div class="container">
-          
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-12 text-center">
+          <h2 class="section-title mb-3">News &amp; Events</h2>
+        </div>
       </div>
-  </secti
+
+      <div class="row">
+        <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+          <div class="h-entry">
+            <a href="single.html"><img src="images/image1.png" alt="" class="img-fluid"></a>
+            <h2 class="font-size-regular"><a href="single.html" class="text-dark">Lorem ipsum dolor sit 2019</a></h2>
+            <div class="meta mb-4">Lorem ipsum <span class="mx-2">&bullet;</span> Jan 00, 0000<span class="mx-2">&bullet;</span> <a href="/">Lorem</a></div>
+          </div> 
+        </div>
+        <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+          <div class="h-entry">
+            <a href="single.html"><img src="images/img_2.jpg" alt="" class="img-fluid"></a>
+            <h2 class="font-size-regular"><a href="single.html" class="text-dark">Lorem ipsum dolor sit 2019</a></h2>
+            <div class="meta mb-4">Lorem ipsum <span class="mx-2">&bullet;</span> Jan 00, 0000<span class="mx-2">&bullet;</span> <a href="/">Lorem</a></div>
+            
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+          <div class="h-entry">
+            <a href="single.html"><img src="images/NicePng_stairs-icon-png_9162802.png" alt="" class="img-fluid"></a>
+            <h2 class="font-size-regular"><a href="single.html" class="text-dark">Lorem ipsum dolor sit 2019</a></h2>
+            <div class="meta mb-4">Lorem ipsum <span class="mx-2">&bullet;</span> Jan 00, 0000<span class="mx-2">&bullet;</span> <a href="/">Lorem</a></div>
+          </div> 
+        </div>
+        
+      </div>
+    </div>
+  </section>
+
+
+{% endblock %}
+    
