--- a/templates/index.html
+++ b/templates/index.html
@@ -225,6 +225,15 @@
     </div>
   </section>
 
+  <footer class="site-footer">
+      <div class="container">
+          <div class="row">
+              
+          </div>
+      </div>
+  </footer>
+
+
 
 {% endblock %}
     
