template aos & jquery

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -54,4 +54,4 @@
     </div>
   </footer>
 
-  <a href="#top" class="gototop"><span class="icon-angle-double-up"></span></a>
+  <a href="#top" style="border-radius: 80px;background-color: darkcyan;" class="gototop"><span class="icon-angle-double-up"></span></a>
