--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -52,13 +52,15 @@
           <nav class="site-navigation position-relative text-right" role="navigation">
 
             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-              <li><a href="#home-section" class="nav-link">Home</a></li>
-              <li><a href="#properties-section" class="nav-link">Book Now</a></li>
-              <li><a href="#agents-section" class="nav-link">Services</a></li>
-              <li><a href="#about-section" class="nav-link">About</a></li>
-              <li><a href="#news-section" class="nav-link">News</a></li>
-              <li><a href="#contact-section" class="nav-link">Contact</a></li>
-              <li><a href="/" class="nav-link">Login</a></li>
+              <li><a href="/" class="nav-link">Home</a></li>
+              <li><a href="/" class="nav-link">Book Now</a></li>
+              <li><a href="/" class="nav-link">Services</a></li>
+              <!-- <li><a href="/" class="nav-link">About</a></li> -->
+              <!-- <li><a href="/" class="nav-link">News</a></li> -->
+              <li><a href="/" class="nav-link">Contact</a></li>
+              <li><a href="/client_registration/" class="nav-link">Register</a></li>
+              <li><a href="/admin_login/" class="nav-link">Admin Login</a></li>
+              <li><a href="/client_login/" class="nav-link">Client Login</a></li>
               <li><a href="/" class="nav-link"><strong>?</strong></a></li>
             </ul>
           </nav>
