--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
 <div class="site-block-wrap">
     <div class="owl-carousel with-dots">
-        <div class="site-blocks-cover overlay overlay-2" style="box-shadow:inset 0 0 0 2000px rgba(135, 189, 135, 0.342);background-image: url(images/hero_1.jpg);" data-aos="fade" id="home-section">
+        <div class="site-blocks-cover overlay overlay-2" style="box-shadow:inset 0 0 0 2000px rgba(135, 189, 135, 0.342);background-image: url(/static/images/hero_1.jpg);" data-aos="fade" id="home-section">
 
 
             <div class="container">
@@ -25,7 +25,7 @@
             
           </div>  
 
-          <div class="site-blocks-cover overlay overlay-2" style="box-shadow:inset 0 0 0 2000px rgba(135, 189, 135, 0.342);background-image: url(images/hero_2.jpg);" data-aos="fade" id="home-section">
+          <div class="site-blocks-cover overlay overlay-2" style="box-shadow:inset 0 0 0 2000px rgba(135, 189, 135, 0.342);background-image: url(/static/images/hero_2.jpg);" data-aos="fade" id="home-section">
   
   
             <div class="container">
@@ -42,7 +42,7 @@
             
           </div> 
 
-          <div class="site-blocks-cover overlay overlay-2" style="box-shadow:inset 0 0 0 2000px rgba(135, 189, 135, 0.342);background-image: url(images/loop.jpg);" data-aos="fade" id="home-section">
+          <div class="site-blocks-cover overlay overlay-2" style="box-shadow:inset 0 0 0 2000px rgba(135, 189, 135, 0.342);background-image: url(/static/images/loop.jpg);" data-aos="fade" id="home-section">
   
   
             <div class="container">
@@ -59,7 +59,7 @@
             
           </div>  
 
-          <div class="site-blocks-cover overlay overlay-2" style="box-shadow:inset 0 0 0 2000px rgba(135, 189, 135, 0.342);background-image: url(images/loop2.jpg);" data-aos="fade" id="home-section">
+          <div class="site-blocks-cover overlay overlay-2" style="box-shadow:inset 0 0 0 2000px rgba(135, 189, 135, 0.342);background-image: url(/static/images/loop2.jpg);" data-aos="fade" id="home-section">
   
   
             <div class="container">
@@ -76,7 +76,7 @@
             
           </div>  
           
-          <div class="site-blocks-cover overlay overlay-2" style="box-shadow:inset 0 0 0 2000px rgba(135, 189, 135, 0.342);background-image: url(images/loop8.jpg);" data-aos="fade" id="home-section">
+          <div class="site-blocks-cover overlay overlay-2" style="box-shadow:inset 0 0 0 2000px rgba(135, 189, 135, 0.342);background-image: url(/static/images/loop8.jpg);" data-aos="fade" id="home-section">
   
   
             <div class="container">
@@ -93,7 +93,7 @@
             
           </div>  
 
-          <div class="site-blocks-cover overlay overlay-2" style="box-shadow:inset 0 0 0 2000px rgba(135, 189, 135, 0.342);background-image: url(images/loop6.jpg);" data-aos="fade" id="home-section">
+          <div class="site-blocks-cover overlay overlay-2" style="box-shadow:inset 0 0 0 2000px rgba(135, 189, 135, 0.342);background-image: url(/static/images/loop6.jpg);" data-aos="fade" id="home-section">
   
   
             <div class="container">
@@ -133,16 +133,16 @@
                 <li>Placeat molestias animi</li>
               </ul>
 
-              <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
+              <p><a href="/" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
           
         </div>
 
         <div class="col-lg-6 mb-5">
 
           <div class="owl-carousel slide-one-item with-dots">
-            <div><img src="images/flank3.jpg" class="img-fluid"></div>
-            <div><img src="images/img_3.png" class="img-fluid"></div>
-              <div><img src="images/img_2.jpg" class="img-fluid"></div>
+            <div><img src="/static/images/flank3.jpg" class="img-fluid"></div>
+            <div><img src="/static/images/img_3.png" class="img-fluid"></div>
+              <div><img src="/static/images/img_2.jpg" class="img-fluid"></div>
             </div>
 
       </div>
@@ -193,30 +193,30 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-12 text-center">
-          <h2 class="section-title mb-3">News &amp; Events</h2>
+          <h2 class="section-title mb-3">Blogs on &amp; Warehousing</h2>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
           <div class="h-entry">
-            <a href="single.html"><img src="images/image1.png" alt="" class="img-fluid"></a>
-            <h2 class="font-size-regular"><a href="single.html" class="text-dark">Lorem ipsum dolor sit 2019</a></h2>
+            <a href="/"><img src="/static/images/image1.png" alt="" class="img-fluid"></a>
+            <h2 class="font-size-regular"><a href="/" class="text-dark">Lorem ipsum dolor sit 2019</a></h2>
             <div class="meta mb-4">Lorem ipsum <span class="mx-2">&bullet;</span> Jan 00, 0000<span class="mx-2">&bullet;</span> <a href="/">Lorem</a></div>
           </div> 
         </div>
         <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
           <div class="h-entry">
-            <a href="single.html"><img src="images/img_2.jpg" alt="" class="img-fluid"></a>
-            <h2 class="font-size-regular"><a href="single.html" class="text-dark">Lorem ipsum dolor sit 2019</a></h2>
+            <a href="/"><img src="/static/images/img_2.jpg" alt="" class="img-fluid"></a>
+            <h2 class="font-size-regular"><a href="/" class="text-dark">Lorem ipsum dolor sit 2019</a></h2>
             <div class="meta mb-4">Lorem ipsum <span class="mx-2">&bullet;</span> Jan 00, 0000<span class="mx-2">&bullet;</span> <a href="/">Lorem</a></div>
             
           </div>
         </div>
         <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
           <div class="h-entry">
-            <a href="single.html"><img src="images/NicePng_stairs-icon-png_9162802.png" alt="" class="img-fluid"></a>
-            <h2 class="font-size-regular"><a href="single.html" class="text-dark">Lorem ipsum dolor sit 2019</a></h2>
+            <a href="/"><img src="/static/images/NicePng_stairs-icon-png_9162802.png" alt="" class="img-fluid"></a>
+            <h2 class="font-size-regular"><a href="/" class="text-dark">Lorem ipsum dolor sit 2019</a></h2>
             <div class="meta mb-4">Lorem ipsum <span class="mx-2">&bullet;</span> Jan 00, 0000<span class="mx-2">&bullet;</span> <a href="/">Lorem</a></div>
           </div> 
         </div>
