--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -45,7 +45,7 @@
       <div class="row align-items-center">
         
         <div class="col-6 col-xl-2">
-          <h1 class="mb-0 site-logo m-0 p-0"><a href="index.html" class="mb-0">store</a></h1>
+          <h1 class="mb-0 site-logo m-0 p-0"><a href="/" class="mb-0">store</a></h1>
         </div>
 
         <div class="col-12 col-md-10 d-none d-xl-block">
