Add phone number field to transport model

--- a/templates/request_summary.html
+++ b/templates/request_summary.html
@@ -27,7 +27,7 @@
                     <p class="card-text"><strong>COUNTY:</strong>{{request_transport.county}}</p>
                     <p class="card-text"><strong>TOWN:</strong>{{request_transport.town}}</p>
                     <p class="card-text"><strong>ADDRESS:</strong>{{request_transport.address}}</p>
-                    <p class="card-text"><strong>PHONE NUMBER:</strong>{{request_transport}}</p>
+                    <p class="card-text"><strong>PHONE NUMBER:</strong>{{request_transport.phone_number}}</p>
                     <p class="card-text"><strong>EMAIL:</strong>{{request_transport.user.email}}</p>
                     <p class="card-text"><strong>STATUS:</strong>PENDING</p>
                 </div>
