--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="/static/css/owl.carousel.min.css">
     <link rel="stylesheet" href="/static/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="/static/css/owl.theme.default.min.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
     <link rel="stylesheet" href="/static/css/jquery.fancybox.min.css">
 
     <link rel="stylesheet" href="/static/css/bootstrap-datepicker.css">
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="/static/fonts/flaticon/font/flaticon.css">
 
     <link rel="stylesheet" href="/static/css/aos.css">
-
+    <link rel="stylesheet" href="/static/css/form.css">
     <link rel="stylesheet" href="/static/css/style.css">
 
   {% endblock %}
@@ -58,13 +58,12 @@
     <script src="/static/js/owl.carousel.min.js"></script>
     <script src="/static/js/jquery.countdown.min.js"></script>
     <script src="/static/js/bootstrap-datepicker.min.js"></script>
-    <script src="/static/js/jquery.easing.1.3.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js" ></script>
     <script src="/static/js/aos.js"></script>
     <script src="/static/js/jquery.fancybox.min.js"></script>
     <script src="/static/js/jquery.sticky.js"></script>
-  
-    
     <script src="/static/js/main.js"></script>     
+    <script src="/static/js/grunt.js"></script>
     
     {% endblock %}
     {% include "footer.html" %}
