--- a/templates/client_registration.html
+++ b/templates/client_registration.html
@@ -4,63 +4,52 @@
 {% block css %}
 {% endblock %}
 {% block content %}
-<div class="container">
-    <form method="POST" enctype="multipart/form-data"> {% csrf_token %}
-        <br>
-        <h1 class="text-center"><u>Client Registration</u></h1>
-    <div class="row mt-4">
-        <div class="form-group col-md-12">
-            <label><i style="font-weight: bold;">Username</i></label>
-            <input type="text" class="form-control mt-2" name="username" placeholder="Enter Username" required>
-        </div>
-    </div>
 
-    <div class="row mt-4">
-        <div class="form-group col-md-6">
-            <label><i style="font-weight: bold;">First Name</i></label>
-            <input type="text" class="form-control mt-2" name="first_name" placeholder="Enter First Name" required>
-        </div>
-        <div class="form-group col-md-6">
-            <label><i style="font-weight: bold;">Last Name</i></label>
-            <input type="text" class="form-control mt-2" name="last_name" placeholder="Enter Last Name" required>
-        </div>
-    </div>
 
-    <div class="row mt-4">
-        <div class="form-group col-md-6">
-            <label><i style="font-weight: bold;">Email</i></label>
-            <input type="email" class="form-control mt-2" name="email" placeholder="Enter Email" required>
-        </div>
-        <div class="form-group col-md-6">
-            <label><i style="font-weight: bold;">Mobile Number</i></label>
-            <input type="number" class="form-control mt-2" name="phone" placeholder="Enter Mobile Number" required>
-        </div>
-    </div>
+<div class="overlay" style="box-shadow:inset 0 0 0 2000px rgba(23, 34, 23, 0.863);background-image: url(/static/images/hero_1.jpg);color: white;" data-aos="fade" id="home-section">
 
-    <div class="row mt-4">
-        <div class="form-group col-md-6">
-            <label><i style="font-weight: bold;">Location Name</i></label>
-            <input type="text" class="form-control mt-2" name="branch" placeholder="Enter Location Name" required>
-        </div>
-        <div class="form-group col-md-6">
-            <label><i style="font-weight: bold;">Client Image</i></label>
-            <input type="file" class="form-control mt-2" name="image" required>
-        </div>
+
+  <div class="container">
+    <div class="row align-items-center justify-content-center">
+      <div class="col-md-6 mt-lg-5 text-center">
+        <br><br>
+        <h1>Registration</h1> 
+        <div style="margin-bottom: 10px;">
+        </div>           
+      </div>
     </div>
-    <div class="row mt-4">
-        <div class="form-group col-md-6">
-            <label><i style="font-weight: bold;">Password</i></label>
-            <input type="password" class="form-control mt-2" name="password" placeholder="Enter Password" required>
-        </div>
-        <div class="form-group col-md-6">
-            <label><i style="font-weight: bold;">Confirm Password</i></label>
-            <input type="password" class="form-control mt-2" name="confirm_password" placeholder="Confirm Password" required>
-        </div>
+  </div>
+<br><br>
+  <a href="#heading" class="smoothscroll arrow-down"><span class="icon-arrow_downward"></span></a>
+</div>  
+
+
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    <div class="col-11 col-sm-10 col-md-10 col-lg-6 col-xl-5 text-center p-0 mt-3 mb-2">
+      <div class="card px-0 pt-4 pb-0 mt-3 mb-3">
+        <h2 id="heading">Client Registration</h2>
+        <p>Fill all the form fields to go to the next step</p>
+        <form method="POST" enctype="multipart/form-data" id="msform">
+          {% csrf_token %}
+          <!-- progressbar -->
+          <ul id="progressbar">
+            <li class="active" id="personal"><strong>Personal</strong></li>
+            <li id="account"><strong>Account</strong></li>
+            <li id="payment"><strong>Image</strong></li>
+            <li id="confirm"><strong>Finish</strong></li>
+          </ul>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0"
+              aria-valuemax="100"></div>
+          </div> <br> <!-- fieldsets -->
+          
+ 
+ 
+        </form>
+      </div>
     </div>
-    <button type="submit" class="btn btn-outline-primary mt-4">Register As Client</button>
+  </div>
 </div>
-</form>
+
 {% endblock %}
-
-
-
