added fieldset finish section

--- a/templates/client_registration.html
+++ b/templates/client_registration.html
@@ -46,6 +46,28 @@
           
  
  
+          <fieldset>
+            <div class="form-card">
+              <div class="row">
+                <div class="col-7">
+                  <h2 class="fs-title">Finish:</h2>
+                </div>
+                <div class="col-5">
+                  <h2 class="steps">Step 4 - 4</h2>
+                </div>
+              </div> <br><br>
+              <h2 class="purple-text text-center"><strong>SUCCESS !</strong></h2> <br>
+              <div class="row justify-content-center">
+                <div class="col-3"> <img src="/static/images/signup/signup.png" class="fit-image"> </div>
+              </div> <br><br>
+              <div class="row justify-content-center">
+                <div class="col-7 text-center">
+                  <h5 class="purple-text text-center">You Have Successfully Signed Up</h5>
+                </div>
+              </div>
+            </div>
+            <button class="btn btn-dark btn-sm mt-4">Login</button>
+          </fieldset>
         </form>
       </div>
     </div>
