--- a/templates/client_registration.html
+++ b/templates/client_registration.html
@@ -46,6 +46,21 @@
           
  
  
+            <div class="form-card">
+              <div class="row">
+                <div class="col-7">
+                  <h2 class="fs-title">Image Upload:</h2>
+                </div>
+                <div class="col-5">
+                  <h2 class="steps">Step 3 - 4</h2>
+                </div>
+              </div> <label class="fieldlabels">Upload Your Photo (optional):</label>
+              <input type="file" style="border-radius: 20px;background-color: rgba(240, 248, 255, 0.681);"  name="image">
+            </div>
+            <button style="margin-top:10px;border-radius: 0px;" class="btn btn-lg btn-primary float-right" type="submit" name="next" class="next action-button">Submit</button>
+            <input style="margin-left: 10px;" type="button" name="previous" class="previous float-left action-button-previous " value="Previous" />
+            <!-- <input style="border-radius: 5px;" type="button" name="next" class="next action-button" value="Skip&Submit" /> -->
+          </fieldset>
           <fieldset>
             <div class="form-card">
               <div class="row">
