added fieldset image account information

--- a/templates/client_registration.html
+++ b/templates/client_registration.html
@@ -45,7 +45,29 @@
           </div> <br> <!-- fieldsets -->
           
  
- 
+          <fieldset>
+            <div class="form-card">
+              <div class="row">
+                <div class="col-7">
+                  <h2 class="fs-title">Account Information:</h2>
+                </div>
+                <div class="col-5">
+                  <h2 class="steps">Step 2 - 4</h2>
+                </div>
+              </div>
+              <label class="fieldlabels">Email: *</label>
+              <input type="email" style="border-radius: 5px;background-color: rgba(240, 248, 255, 0.681);" required name="email" placeholder="Email" />
+              <label class="fieldlabels">Contact No.: *</label>
+              <input style="border-radius: 5px;background-color: rgba(240, 248, 255, 0.681);" type="tel" name="phone" required placeholder="Enter Mobile Number." />
+              <label class="fieldlabels">Password.: *</label>
+              <input style="border-radius: 5px;background-color: rgba(240, 248, 255, 0.681);" required style="border-radius: 20px;background-color: rgba(240, 248, 255, 0.681);" type="password" name="password" />
+              <label class="fieldlabels">Confirm Password.: *</label>
+              <input style="border-radius: 5px;background-color: rgba(240, 248, 255, 0.681);" required type="password" name="confirm_password"/>
+            </div>
+            <input type="button" name="next" class="next action-button" value="Next" />
+            <input type="button" name="previous" class="previous action-button-previous" value="Previous" />
+          </fieldset>
+          <fieldset>
             <div class="form-card">
               <div class="row">
                 <div class="col-7">
