added fieldset personal information

--- a/templates/client_registration.html
+++ b/templates/client_registration.html
@@ -44,7 +44,25 @@
               aria-valuemax="100"></div>
           </div> <br> <!-- fieldsets -->
           
- 
+          <fieldset>
+            <div class="form-card">
+              <div class="row">
+                <div class="col-7">
+                  <h2 class="fs-title">Personal Information:</h2>
+                </div>
+                <div class="col-5">
+                  <h2 class="steps">Step 1 - 4</h2>
+                </div>
+              </div>
+              <label class="fieldlabels">First Name: *</label> 
+              <input style="border-radius: 5px;background-color: rgba(240, 248, 255, 0.681);" required type="text" name="first_name" placeholder="First Name" />
+              <label class="fieldlabels">Last Name: *</label>
+              <input style="border-radius: 5px;background-color: rgba(240, 248, 255, 0.681);" required type="text" name="last_name" placeholder="Last Name" />
+              <label class="fieldlabels">User Name: *</label>
+              <input style="border-radius: 5px;background-color: rgba(240, 248, 255, 0.681);" aria-required="true" type="text" name="username" required placeholder="User Name" />
+            </div>
+            <input type="button" name="next" class="next action-button" value="Next" />
+          </fieldset>
           <fieldset>
             <div class="form-card">
               <div class="row">
