--- a/templates/profile.html
+++ b/templates/profile.html
@@ -28,6 +28,24 @@ background: #212529b8;
 {% endblock %}
 {% block content %}
 
+<div class="overlay" style="box-shadow:inset 0 0 0 2000px rgba(23, 34, 23, 0.863);background-image: url(/static/images/hero_1.jpg);color: white;" data-aos="fade" id="home-section">
+
+
+    <div class="container">
+      <div class="row align-items-center justify-content-center">
+        <div class="col-md-6 mt-lg-5 text-center">
+          <br><br>
+          <h1>Client Login</h1> 
+          <div style="margin-bottom: 10px;">
+          </div>           
+        </div>
+      </div>
+    </div>
+  <br><br>
+    <a href="#heading" class="smoothscroll arrow-down"><span class="icon-arrow_downward"></span></a>
+  </div>  
+
+
 <div class="container profile">
         <div class="row">
             <div class="col-md-4">
