add staff login link

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -58,12 +58,23 @@
               <!-- <li><a href="/" class="nav-link">About</a></li> -->
               <!-- <li><a href="/" class="nav-link">News</a></li> -->
               <li><a href="/" class="nav-link">Contact</a></li>
+
               <li><a href="/client_registration/" class="nav-link">Register</a></li>
               <li><a href="/admin_login/" class="nav-link">Admin Login</a></li>
               <li><a href="/client_login/" class="nav-link">Client Login</a></li>
+              <li><a href="/staff_login/" class="nav-link">Staff Login</a></li>
+              <li><a href="/change_password/" class="nav-link">Change Password</a></li>
+              <li><a href="/logout/" class="nav-link">Log Out</a></li>
               <li><a href="/" class="nav-link"><strong>?</strong></a></li>
+              
             </ul>
           </nav>
+        </div>
+              
+    
+        
+              
+            
         </div>
 
 
