--- a/templates/request_summary.html
+++ b/templates/request_summary.html
@@ -24,7 +24,7 @@
                             <p class="card-text"><strong>FIRST NAME: </strong>{{request_transport.user.first_name}}</p>
                             <p class="card-text"><strong>LAST NAME: </strong>{{request_transport.user.last_name}}</p>
                             <p class="card-text"><strong>TYPE OF REQUEST: </strong>{{request_transport.transport_type}}</p>
-                            <p class="card-text"><strong>GOODS TO BE TRANSPORTED: </strong></p><hr>
+                            <p class="card-text"><strong>GOODS TO BE TRANSPORTED COUNT: {{request_transport.goods.count}}</strong></p><hr>
                             <h4><strong>Address Details</strong></h4>
                             <p class="card-text"><strong>COUNTY: </strong>{{request_transport.county}}</p>
                             <p class="card-text"><strong>TOWN: </strong>{{request_transport.town}}</p>
