navbar rectification & added links & grouped to dropdown

--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -25,7 +25,7 @@
 
 <div class="container">
 <br>
-<h1 class="text-center"><u>Admin Login</u></h1><br>
+<h1 class="text-center"><u></u></h1><br>
 <p><b>Note:</b> Only the admin can login from here. No Client will be allowed to login.</p>
     <form method="POST"> {% csrf_token %}
 
