--- a/templates/client_login.html
+++ b/templates/client_login.html
@@ -27,7 +27,7 @@
 
 <div class="container">
     <br>
-    <h1 class="text-center"><u>Client Login</u></h1>
+    <h1 class="text-center"><u></u></h1>
     <form method="POST"> {% csrf_token %}
 
         <div class="row mt-4">
