--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -5,6 +5,29 @@
 {% endblock %}
 
 {% block content %}
+
+<div class="overlay"
+    style="box-shadow:inset 0 0 0 2000px rgba(23, 34, 23, 0.863);background-image: url(/static/images/hero_1.jpg);color: white;"
+    data-aos="fade" id="home-section">
+
+
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-md-6 mt-lg-5 text-center">
+                <br><br>
+                <h1>Reset Password</h1>
+                <div style="margin-bottom: 10px;">
+                </div>
+            </div>
+        </div>
+    </div>
+    <br><br>
+    <a href="#heading" class="smoothscroll arrow-down"><span class="icon-arrow_downward"></span></a>
+</div>
+
+
+
+
 <form class="container mt-3" method="POST" name="change_password" onsubmit="return checkPassword()">
     {% csrf_token %}
     <div class="row mt-4">
