--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -53,7 +53,7 @@
 
           <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
             <li><a href="/" class="nav-link">Home</a></li>
-            <li><a href="/" class="nav-link">Book Now</a></li>
+            <li><a href="/units/book/" class="nav-link">Book Now</a></li>
             <li><a href="/" class="nav-link">Services</a></li>
             <!-- <li><a href="/" class="nav-link">About</a></li> -->
             <!-- <li><a href="/" class="nav-link">News</a></li> -->
