booking link link rectification

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
-<footer class="site-footer">
-    <div class="container">
+<footer class="site-footer" style="margin-bottom: 100;margin-top: 500px;">
+    <div class="container" >
       <div class="row">
         <div class="col-md-8">
           <div class="row">
@@ -43,15 +43,17 @@
 
         </div>
       </div>
-      <div class="row pt-5 mt-5 text-center">
-        <div class="col-md-12">
-          <div class="border-top pt-5">
-          <p class="copyright"><small>&copy; <script>document.write(new Date().getFullYear());</script> StoreCentre. All Rights Reserved By.<a href="/" target="_blank">Store.com</a></small></p>
-          </div>
+    </div>
+    <div class="row text-center">
+      <div class="col-md-12">
+        <div class="border-top" style="margin-top:120px;">
+        <p class="copyright text-left pt-4"><small>&copy; <script>document.write(new Date().getFullYear());</script> StoreCentre. All Rights Reserved By.<a href="/" target="_blank">Store.com</a></small></p>
         </div>
-        
       </div>
+      
     </div>
   </footer>
 
   <a href="#top" style="border-radius: 80px;background-color: darkcyan;" class="gototop"><span class="icon-angle-double-up"></span></a>
+
+ 
