styled admin form&client form&staff form

--- a/templates/booking.html
+++ b/templates/booking.html
@@ -70,7 +70,7 @@
                                         class="form-label text-info">Check Out Date</span> </div>
                             </div>
                         </div>
-                        <div class="form-btn"> <button class="btn btn-info btn-block">Submit</button> </div>
+                        <div class="form-btn"> <button style="border-radius: 40px;" class="btn btn-info btn-sm btn-block">Submit</button> </div>
                     </form>
                 </div>
             </div>
