--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -12,7 +12,7 @@
       <div class="row align-items-center justify-content-center">
         <div class="col-md-6 mt-lg-5 text-center">
           <br><br>
-          <h1>Registration</h1> 
+          <h1>Admin Login</h1> 
           <div style="margin-bottom: 10px;">
           </div>           
         </div>
@@ -23,7 +23,7 @@
   </div>  
 
 
-<div class="container">
+<!-- <div class="container">
 <br>
 <h1 class="text-center"><u></u></h1><br>
 <p><b>Note:</b> Only the admin can login from here. No Client will be allowed to login.</p>
@@ -44,4 +44,60 @@
     </div>
     <button type="submit" class="btn btn-outline-primary mt-4">Login</button>
 </div>
+ -->
+
+
+
+<div style="margin-top: -90px;" class="limiter">
+  <div class="wrap-login100">
+      <div class="login100-pic js-tilt" data-tilt>
+          <img src="/static/images/hoverable/img-01.png" alt="IMG">
+      </div>
+
+      <form method="POST" enctype="multipart/form-data" class="login100-form validate-form">
+          {% csrf_token %}
+          <span class="login100-form-title">
+              ADMIN LOGIN
+          </span>
+          <p class="text-center"><b>Note: </b> Only the <strong>Admin</strong> can login from here. <br> No <strong>Client</strong> will be allowed to login.</p><br>
+          <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+              <input class="input100" type="text" name="username" placeholder="Enter your username">
+              <span class="focus-input100"></span>
+              <span class="symbol-input100">
+                  <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+              </span>
+          </div>
+
+          <div class="wrap-input100 validate-input" data-validate="Password is required">
+              <input class="input100" type="password" name="password" placeholder="Enter Password">
+              <span class="focus-input100"></span>
+              <span class="symbol-input100">
+                  <i class="fa fa-lock" aria-hidden="true"></i>
+              </span>
+          </div>
+
+          <div class="container-login100-form-btn">
+              <button class="login100-form-btn">
+                  Login
+              </button>
+          </div>
+
+          <div class="text-center p-t-12">
+              <span class="txt1">
+                  Forgot
+              </span>
+              <a class="txt2" href="#">
+                  Password ?
+              </a>
+          </div>
+
+          <div class="text-center p-t-16">
+              <p>Don't have an account ? <a class="txt2" href="/client_registration/"><strong> SignUp</strong></a></p>
+          </div>
+      </form>
+  </div>
+</div>
+
+
+
 {% endblock %}
