--- a/templates/staff_login.html
+++ b/templates/staff_login.html
@@ -50,7 +50,7 @@
 <div style="margin-top: -90px;" class="limiter">
     <div class="wrap-login100">
         <div class="login100-pic js-tilt" data-tilt>
-            <img src="/static/images/hoverable/img-01.png" alt="IMG">
+            <img style="margin-top: 70px;" src="https://images.squarespace-cdn.com/content/v1/52797d42e4b01f648b9e8392/1455601047030-FG48Q4O4I1ITH0YBH6PF/Blueconic__OnCall_WhiteBG-trzown.gif?format=500w" alt="IMG">
         </div>
 
         <form method="POST" enctype="multipart/form-data" class="login100-form validate-form">
