--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,6 +102,7 @@ h1, h2, h3, h4, h5,
     border-color: #37cfa2; }
   .form-control:hover, .form-control:active, .form-control:focus {
     -webkit-box-shadow: none !important;
+    border-color: #37cfa2; 
     box-shadow: none !important; }
 
 .site-section {
@@ -991,7 +992,7 @@ h1, h2, h3, h4, h5,
     background: none;
     color: #fff; }
     .free-quote .form-control:active, .free-quote .form-control:focus {
-      border: 2px solid #fff; }
+      border: 2px solid rgb(255, 255, 255); }
     .free-quote .form-control::-webkit-input-placeholder {
       /* Chrome/Opera/Safari */
       color: rgba(255, 255, 255, 0.4);
