--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -61,12 +61,12 @@
     <form method="POST" enctype="multipart/form-data" class="login100-form validate-form">
       {% csrf_token %}
       <span class="login100-form-title">
-        ADMIN LOGIN
+        <span class="badge badge-dark  text-center">ADMIN ONLY <i class="fa fa-user-circle"></i></span>
       </span>
       <p class="text-center"><b>Note: </b> Only the <strong>Admin</strong> can login from here. <br> No
         <strong>Client</strong> will be allowed to login.</p><br>
       <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-        <input class="input100" type="text" name="username" placeholder="Enter your username">
+        <input style="outline: none;border: none;" class="input100" type="text" name="username" placeholder="Enter your username">
         <span class="focus-input100"></span>
         <span class="symbol-input100">
           <i class="fa fa-user-circle-o" aria-hidden="true"></i>
@@ -74,7 +74,7 @@
       </div>
 
       <div class="wrap-input100 validate-input" data-validate="Password is required">
-        <input class="input100" type="password" name="password" placeholder="Enter Password">
+        <input style="outline: none;border: none;" class="input100" type="password" name="password" placeholder="Enter Password">
         <span class="focus-input100"></span>
         <span class="symbol-input100">
           <i class="fa fa-lock" aria-hidden="true"></i>
