--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -5,7 +5,30 @@
 {% block css %}
 {% endblock %}
 {% block content %}
-<div class="container">
+
+
+<div class="overlay"
+    style="box-shadow:inset 0 0 0 2000px rgba(23, 34, 23, 0.863);background-image: url(/static/images/hero_1.jpg);color: white;"
+    data-aos="fade" id="home-section">
+
+
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-md-6 mt-lg-5 text-center">
+                <br><br>
+                <h1>Edit Profile</h1>
+                <div style="margin-bottom: 10px;">
+                </div>
+            </div>
+        </div>
+    </div>
+    <br><br>
+    <a href="#eprofile" class="smoothscroll arrow-down"><span class="icon-arrow_downward"></span></a>
+</div>
+
+
+
+<!-- <div class="container">
     <form method="POST"> {% csrf_token %}
 <div class="row mt-4">
     <div class="form-group col-md-6">
@@ -31,6 +54,62 @@
     </div>
     <button type="submit" class="btn btn-outline-primary mt-5">Update Profile</button>
 </form>
-</div>
-{% endblock %}
+</div> -->
 
+
+
+
+
+<section id="eprofile" class="vh-100" style="background-color: #f4f5f7;">
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col col-lg-6 mb-4 mb-lg-0">
+                <div class="card mb-3" style="border-radius: .5rem;">
+                    <div class="row g-0">
+                        <div class="col-md-4 gradient-custom text-center text-white"
+                            style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
+                            <img src="{{user.client.image.url}}" alt="Avatar"
+                                class="img img-responsive rounded-circle my-5" width="150px" height="150px" />
+                            <h5>{{user}}</h5>
+                            <p>@store.com</p>
+                            <a class="text-light" href="/profile/"> Profile <i class="fa fa-caret-left mb-5"></i></a>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body p-4">
+                                <h2>EDIT PROFILE</h2>
+                                <hr class="mt-2 mb-3">
+                                <form method="POST"> {% csrf_token %}
+                                    <div class="row pt-1">
+                                        <div class="col-12 mb-3">
+                                            <h6>Email</h6>
+                                            <input type="email" class="form-control mt-2" required name="email"
+                                                value="{{user.email}}">
+                                        </div>
+                                        <div class="col-12 mb-3">
+                                            <h6>Mobile Number</h6>
+                                            <input type="tel" class="form-control mt-2" required name="phone"
+                                                value="{{user.student.phone}}">
+                                        </div>
+                                        <div class="col-12 mb-3">
+                                            <h6>Location Name</h6>
+                                            <input type="text" class="form-control mt-2" required name="branch"
+                                                value="{{user.client.client}}">
+                                        </div>
+                                    </div>
+                                    <hr class="mt-2 mb-3">
+                                    <button class="btn btn-dark btn-sm pull-right">UPDATE <i
+                                            class="fa fa-cogs"></i></button><br><br>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</section>
+
+
+
+{% endblock %}
