--- a/templates/profile.html
+++ b/templates/profile.html
@@ -35,7 +35,7 @@ background: #212529b8;
       <div class="row align-items-center justify-content-center">
         <div class="col-md-6 mt-lg-5 text-center">
           <br><br>
-          <h1>Client Login</h1> 
+          <h1>Profile</h1> 
           <div style="margin-bottom: 10px;">
           </div>           
         </div>
@@ -46,69 +46,59 @@ background: #212529b8;
   </div>  
 
 
-<div class="container profile">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="profile-img">
-                    <img src="{{client.image.url}}" alt="" width="310px" height="270px">
-                </div>
-            </div>
-            <div class="col-md-8">
-                <div class="profile-tab">
-                    <div class="tab-pane">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>ID:</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>{{user.id}}</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Username:</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>{{user}}</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Full Name:</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>{{user.get_full_name}}</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Email:</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>{{user.email}}</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Phone Number:</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>{{user.client.phone}}</p>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Location:</label>
-                            </div>
-                            <div class="col-md-6">
-                                <p>{{user.client.location}}</p>
-                            </div>
-                        </div>
-                        
+<section class="vh-100" style="background-color: #f4f5f7;">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col col-lg-6 mb-4 mb-lg-0">
+          <div class="card mb-3" style="border-radius: .5rem;">
+            <div class="row g-0">
+              <div class="col-md-4 gradient-custom text-center text-white" style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
+                <img src="{{user.client.image.url}}" alt="Avatar" class="img img-responsive rounded-circle my-5" width="150px" height="150px"/>
+                <h5>{{user}}</h5>
+                <p>@store.com</p>
+                <a class="text-light" href="/edit_profile/"> Edit <i class="far fa-edit mb-5"></i></a>
+              </div>
+              <div class="col-md-8">
+                <div class="card-body p-4">
+                  <h2>PROFILE INFORMATION</h2>
+                  <hr class="mt-2 mb-3">
+                  <div class="row pt-1">
+                    <div class="col-8 mb-3">
+                        <h6>Full Name</h6>
+                        <p class="text-dark">{{user.get_full_name}}</p>
+                      </div>
+                    <div class="col-7 mb-3">
+                      <h6>Email</h6>
+                      <p class="text-dark text-lowercase" style="font-size: 10px;">{{user.email}}</p>
                     </div>
-                    <a href="/edit_profile/" style="width: 9rem;" class="btn btn-outline-primary mt-3">Edit Profile</a>
+                    <div class="col-4 mb-3">
+                      <h6>Phone</h6>
+                      <p class="text-dark">{{user.client.phone}}</p>
+                    </div>
+                  </div>
+                  <h6>Location & Id</h6>
+                  <hr class="mt-2 mb-3">
+                  <div class="row pt-1">
+                    <div class="col-6 mb-3">
+                      <h6>Store Number Id</h6>
+                      <p class="text-dark">{{user.id}}</p>
+                    </div>
+                    <div class="col-6 mb-3">
+                      <h6>Location</h6>
+                      <p class="text-dark">{{user.client.location}}</p>
+                    </div>
+                  </div>
+                  <div class="d-flex justify-content-start">
+                    <a class="mr-3" href="/"><i class="fab fa-facebook-f me-3 text-dark"></i></a>
+                    <a class="mr-3" href="/"><i class="fab fa-instagram  text-dark"></i></a>
+                    <a class="mr-3" href="/"><i class="fab fa-twitter me-3 text-dark"></i></a>
+                  </div>
                 </div>
+              </div>
             </div>
-</div>
-</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock %}
