Add records template

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -107,11 +107,13 @@
         <nav class="site-navigation position-relative text-right" role="navigation">
 
           <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-            <li><a href="/" class="nav-link">Home</a></li>
-            <li><a href="{% url 'units' 'book' %}" class="nav-link">Book Now</a></li>
-            <li><a href="/" class="nav-link">Services</a></li>
+            <li><a href="/" class="nav-link">Home</a></
             <li><a href="/" class="nav-link">About</a></li>
+            <li><a href="/units/book/" class="nav-link">Book Now</a></li>
+            <li><a href="services/" class="nav-link">Services</a></li>
+            <li><a href="/records" class="nav-link">Records</a></li>
             <li><a href="/" class="nav-link">News</a></li>
+
             <li><a href="/" class="nav-link">Contact</a></li>
             <li><a href="/client_registration/" class="nav-link">Register</a></li>
             <li class="nav-item dropdown">
