--- a/templates/client_registration.html
+++ b/templates/client_registration.html
@@ -20,7 +20,7 @@
 </div>  
 
 
-<div class="container">
+<!-- <div class="container">
   <form  action="{% url 'client_register' %}" method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
@@ -29,6 +29,116 @@
     </div>
     <input type="hidden" name="next" value="{{next}}">
 </form>
+</div> -->
+
+
+<div class="container-fluid" style="background-color: azure;">
+  <div class="row justify-content-center">
+    <div class="col-11 col-sm-10 col-md-10 col-lg-6 col-xl-5 text-center p-0 mt-3 mb-2">
+      <div class="card px-0 pt-4 pb-0 mt-3 mb-3" style="box-shadow: 0px 0px 2px black;">
+        <div class="container">
+          <h2 id="heading">Client Registration</h2>
+          <p>Fill all the form fields to go to the next step</p>
+          <form method="POST" enctype="multipart/form-data" id="msform">
+            {% csrf_token %}
+            <!-- progressbar -->
+            <ul id="progressbar">
+              <li class="active" id="personal"><strong>Personal</strong></li>
+              <li id="account"><strong>Account</strong></li>
+              <li id="payment"><strong>Contact</strong></li>
+              <li id="confirm"><strong>Finish</strong></li>
+            </ul>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0"
+                aria-valuemax="100"></div>
+            </div> <br> <!-- fieldsets -->
+            
+            <fieldset>
+              <div class="form-card">
+                <div class="row">
+                  <div class="col-7">
+                    <h2 class="fs-title">Personal Information:</h2>
+                  </div>
+                  <div class="col-5">
+                    <h2 class="steps">Step 1 - 4</h2>
+                  </div>
+                </div>
+                <label class="fieldlabels">First Name: *</label> 
+                <input style="border-radius: 5px;background-color: rgba(240, 248, 255, 0.681);" required type="text" name="first_name" placeholder="First Name" />
+                <label class="fieldlabels">Last Name: *</label>
+                <input style="border-radius: 5px;background-color: rgba(240, 248, 255, 0.681);" required type="text" name="last_name" placeholder="Last Name" />
+                <label class="fieldlabels">User Name: *</label>
+                <input style="border-radius: 5px;background-color: rgba(240, 248, 255, 0.681);" aria-required="true" type="text" name="username" required placeholder="User Name" />
+              </div>
+              <input style="border-radius: 5px;" type="button" name="next" class="next action-button" value="Next" />
+            </fieldset>
+            <fieldset>
+              <div class="form-card">
+                <div class="row">
+                  <div class="col-7">
+                    <h2 class="fs-title">Account Information:</h2>
+                  </div>
+                  <div class="col-5">
+                    <h2 class="steps">Step 2 - 4</h2>
+                  </div>
+                </div>
+                <label class="fieldlabels">Email: *</label>
+                <input type="email" style="border-radius: 5px;background-color: rgba(240, 248, 255, 0.681);" required name="email" placeholder="Email" />
+                <label class="fieldlabels">Password.: *</label>
+                <input style="border-radius: 5px;background-color: rgba(240, 248, 255, 0.681);" required style="border-radius: 20px;background-color: rgba(240, 248, 255, 0.681);" type="password" name="password" />
+                <label class="fieldlabels">Confirm Password.: *</label>
+                <input style="border-radius: 5px;background-color: rgba(240, 248, 255, 0.681);" required type="password" name="confirm_password"/>
+              </div>
+              <input style="border-radius: 5px;" type="button" name="next" class="next action-button" value="Next" />
+              <input style="border-radius: 5px;" type="button" name="previous" class="previous action-button-previous" value="Previous" />
+            </fieldset>
+            <fieldset>
+              <div class="form-card">
+                <div class="row">
+                  <div class="col-7">
+                    <h2 class="fs-title">Almost There</h2>
+                  </div>
+                  <div class="col-5">
+                    <h2 class="steps">Step 3 - 4</h2>
+                  </div>
+                </div>
+                <label class="fieldlabels">Contact No.: *</label>
+                <input style="border-radius: 5px;background-color: rgba(240, 248, 255, 0.681);" type="tel" name="phone" required placeholder="Enter Mobile Number." />
+              </div>
+              <input style="margin-top:10px;border-radius: 5px;" type="button" name="next" class="next action-button" value="Next">
+              <input style="border-radius: 5px;" style="margin-left: 10px;" type="button" name="previous" class="previous float-left action-button-previous " value="Previous" />
+              <!-- <input style="border-radius: 5px;" type="button" name="next" class="next action-button" value="Skip&Submit" /> -->
+            </fieldset>
+            <fieldset>
+              <div class="form-card">
+                <div class="row">
+                  <div class="col-7">
+                    <h2 class="fs-title">Finish:</h2>
+                  </div>
+                  <div class="col-5">
+                    <h2 class="steps">Step 4 - 4</h2>
+                  </div>
+                </div> <br><br>
+                <h2 class="purple-text text-center"><strong>SUCCESS !</strong></h2> <br>
+                <div class="row justify-content-center">
+                  <div class="col-3"> <img src="/static/images/signup/signup.png" class="fit-image"> </div>
+                </div> <br><br>
+                <div class="row justify-content-center">
+                  <div class="col-7 text-center">
+                    <h5 class="purple-text text-center">You're One Click Away From Creation</h5>
+                    <small>* make sure you fill all required fields before finishing</small>
+                  </div>
+                </div>
+              </div>
+              <button class="btn btn-primary btn-sm btn-sm mt-4 previous" style="margin-top:10px;border-radius: 0px;" type="button" name="previous">Back</button>
+              <button class="btn btn-primary btn-sm btn-sm mt-4" style="margin-top:10px;border-radius: 0px;" type="submit">Finish</button>
+            </fieldset>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
 
 {% endblock %}
