client reg form edited

--- a/templates/staff_registration.html
+++ b/templates/staff_registration.html
@@ -126,11 +126,13 @@
                 </div> <br><br>
                 <div class="row justify-content-center">
                   <div class="col-7 text-center">
-                    <h5 class="purple-text text-center">You Have Successfully Signed Up</h5>
+                    <h5 class="purple-text text-center">You're One Click Away From Creation</h5>
+                    <small>* make sure you fill all required fields before finishing</small>
                   </div>
                 </div>
               </div>
-              <button class="btn btn-dark btn-sm mt-4">Login</button>
+              <button class="btn btn-primary btn-sm btn-sm mt-4 previous" style="margin-top:10px;border-radius: 0px;" type="button" name="previous">Back</button>
+              <button class="btn btn-primary btn-sm btn-sm mt-4" style="margin-top:10px;border-radius: 0px;" type="submit">Finish</button>
             </fieldset>
           </form>
         </div>
