client login form edited signup redirect

--- a/templates/client_login.html
+++ b/templates/client_login.html
@@ -72,7 +72,7 @@
                 </div>
     
                 <div class="text-center p-t-16">
-                    <p>Don't have an account ? <a class="txt2" href="/client_registration/"><strong> SignUp</strong></a></p>
+                    <p>Don't have an account ? <a class="txt2" href="/client_register/"><strong> SignUp</strong></a></p>
                 </div>
             </form>
         </div>
