Remove county, town and transport goods fields

--- a/templates/request_transport.html
+++ b/templates/request_transport.html
@@ -57,7 +57,7 @@
 {{block.super}}
 <script src="/static/js/mapsjs/autocompleteform.js"></script>
 <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBoOok617x253OXzJ2iEbZ-K1_DO-Wei-8&callback=initAutocomplete&libraries=places&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key={{api_key}}&callback=initAutocomplete&libraries=places&v=weekly"
       async
     ></script>
 {%endblock%}
